--- a/Interdisciplinar/Views/Alunos/Create.cshtml
+++ b/Interdisciplinar/Views/Alunos/Create.cshtml
@@ -9,64 +9,82 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            Registro de um novo aluno
-        </div>
-        <div class="panel-body">
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label	col-md-2" })
-                    @Html.LabelFor(model => model.Telefone, htmlAttributes: new { @class = "control-label	col-md-2" })
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label	col-md-2" })
-                    @Html.LabelFor(model => model.Turma, htmlAttributes: new { @class = "control-label	col-md-2" })
-                    @Html.LabelFor(model => model.Turno, htmlAttributes: new { @class = "control-label	col-md-2" })
+    
+        
+            <h2>Registro de um novo aluno</h2>
+       
+        <table class="table	table-striped table-hover table-bordered table-condensed">
+            <div class="panel-body">
+                <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label	col-md-1" })
+                        <div class="col-md-11">
+                            @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Telefone, htmlAttributes: new { @class = "control-label	col-md-1" })
+                        <div class="col-md-11">
+                            @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-                        @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label	col-md-1" })
+                        <div class="col-md-11">
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Turma, htmlAttributes: new { @class = "control-label	col-md-1" })
+                        <div class="col-md-11">
+                            @Html.EditorFor(model => model.Turma, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Turma, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-                        @Html.EditorFor(model => model.Turma, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Turma, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Turno, htmlAttributes: new { @class = "control-label	col-md-1" })
+                        <div class="col-md-11">
+                            @Html.EditorFor(model => model.Turno, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Turno, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-                        @Html.EditorFor(model => model.Turno, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Turno, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.CursoId, "CursoId", htmlAttributes: new { @class = "control-label	col-md-1" })
+                        <div class="col-md-11">
+                            @Html.DropDownList("CursoId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.CursoId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    
+                        <div class="col-md-offset-1	col-md-11">
+                            <input type="submit" value="Adicionar	Aluno" class="btn	btn-primary" />
+                            @Html.ActionLink("Retornar	para a listagem de alunos", "Index", null, new { @class = "btn	btn-success" })
+                        </div>
+                        <br />
+                        <br />
                     </div>
                 </div>
+           
+            </table>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.CursoId, "CursoId", htmlAttributes: new { @class = "control-label	col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("CursoId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CursoId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="panel-footer panel-info">
-                    <div class="col-md-offset-2	col-md-10">
-                        <input type="submit" value="Adicionar	Aluno" class="btn	btn-danger" />
-                        @Html.ActionLink("Retornar	para a listagem de alunos", "Index", null, new { @class = "btn	btn-warning" })
-                    </div>
-                    <br />
-                    <br />
-                    </div>
-                </div>
-            </div>
-         </div>
-}
-@section	ScriptPage	{
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('li').removeClass("active");
-        $('#liProdutos').addClass("active");
-    });
-</script>
 
-}
+            }
+            @section	ScriptPage	{
+                <script type="text/javascript">
+                    $(document).ready(function () {
+                        $('li').removeClass("active");
+                        $('#liAlunos').addClass("active");
+                    });
+                </script>
+
+            }
 
