--- a/Interdisciplinar/Views/Alunos/Details.cshtml
+++ b/Interdisciplinar/Views/Alunos/Details.cshtml
@@ -1,74 +1,73 @@
 ﻿@model Interdisciplinar.Models.Aluno
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "visualizando	os	dados	de	um	aluno";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <div>
-        <h4>Aluno</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Nome)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Nome)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Telefone)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Telefone)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Turma)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Turma)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Turno)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Turno)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.CursoId)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.CursoId)
-            </dd>
-    
-        </dl>
+<h2>Visualizando	detalhes	de	um aluno</h2>
+<div class="form-group">
+    @Html.LabelFor(model => model.Nome)
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i class="glyphicon	glyphicon-user"></i>
+        </span>
+        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
     </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.AlunoId }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-</body>
-</html>
+</div>
+<div class="form-group">
+    @Html.LabelFor(model => model.Telefone)
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i class="glyphicon glyphicon-earphone"></i>
+        </span>
+        @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+    </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Email)
+        <div class="input-group">
+            <span class="input-group-addon">
+                <i class="glyphicon	glyphicon-envelope"></i>
+            </span>
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Turma)
+        <div class="input-group">
+            <span class="input-group-addon">
+                <i class="glyphicon	glyphicon-pencil"></i>
+            </span>
+            @Html.EditorFor(model => model.Turma, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Turno)
+        <div class="input-group">
+            <span class="input-group-addon">
+                <i class="glyphicon	glyphicon-bell"></i>
+            </span>
+            @Html.EditorFor(model => model.Turno, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Curso.Nome)
+        <div class="input-group">
+            <span class="input-group-addon">
+                <i class="glyphicon glyphicon-education"></i>
+            </span>
+            @Html.EditorFor(model => model.Curso.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+        </div>
+    </div>
+    @Html.ActionLink("Alterar", "Edit", new { id = Model.AlunoId }, new { @class = "btn	btn-primary" })
+    @Html.ActionLink("Retornar	para	a	listagem", "Index", null, new { @class = "btn	btn-success" })
+
+    @section ScriptPage	{
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $('li').removeClass("active");
+                $('#liAlunos').addClass("active");
+            });
+        </script>
+    }
