--- a/Interdisciplinar/Views/Cursos/Details.cshtml
+++ b/Interdisciplinar/Views/Cursos/Details.cshtml
@@ -5,28 +5,47 @@
     ViewBag.Title = "Visualizando detalhes de um curso";
 }
 
-<div class="panel	panel-primary">
-    <div class="panel-heading">
-        Visualizando detalhes de	um curso
+
+<h2> Visualizando detalhes de	um curso</h2>
+
+<div class="form-group">
+    @Html.LabelFor(model => model.Nome)
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i class="glyphicon	 glyphicon-user"></i>
+        </span>
+        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
     </div>
-    <div class="panel-body">
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome)
-            @Html.LabelFor(model => model.Coordenador)
-            @Html.LabelFor(model => model.EmailCoordenador)
-            <br />
-            <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="glyphicon	 glyphicon-user"></i>
-                </span>
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                @Html.EditorFor(model => model.Coordenador, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                @Html.EditorFor(model => model.EmailCoordenador, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-            </div>
-        </div>
-    </div>
-    <div class="panel-footer panel-info">
-        @Html.ActionLink("Alterar", "Edit", new { id = Model.CursoId }, new { @class = "btn	btn-info" })
-        @Html.ActionLink("Retornar	para a	listagem", "Index", null, new { @class = "btn btn-info" })
-        </div>
 </div>
+<div class="form-group">
+    @Html.LabelFor(model => model.Coordenador)
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i class="glyphicon	 glyphicon-user"></i>
+        </span>
+        @Html.EditorFor(model => model.Coordenador, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+    </div>
+</div>
+
+<div class="form-group">
+    @Html.LabelFor(model => model.EmailCoordenador)
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i class="glyphicon	 glyphicon-user"></i>
+        </span>
+        @Html.EditorFor(model => model.EmailCoordenador, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+    </div>
+</div>
+
+
+@Html.ActionLink("Alterar", "Edit", new { id = Model.CursoId }, new { @class = "btn	btn-primary" })
+@Html.ActionLink("Retornar	para a	listagem", "Index", null, new { @class = "btn btn-success" })
+
+@section ScriptPage	{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('li').removeClass("active");
+            $('#liCursos').addClass("active");
+        });
+    </script>
+}
