--- a/Interdisciplinar/Views/Cursos/Edit.cshtml
+++ b/Interdisciplinar/Views/Cursos/Edit.cshtml
@@ -13,45 +13,47 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            Alteração	dos	dados	de	um	curso
-        </div>
+    <h2> Alteração	dos	dados	de	um	curso</h2>
+    <table class="table	table-striped table-hover table-bordered table-condensed">
         <div class="panel-body">
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.CursoId)
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.LabelFor(model => model.Coordenador, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.LabelFor(model => model.EmailCoordenador, htmlAttributes: new { @class = "control-label col-md-2" })
-
-                    <div class="col-md-10">
+                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-1" })
+                    <div class="col-md-11">
                         @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
-
-                        @Html.EditorFor(model => model.Coordenador, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Coordenador, "", new { @class = "text-danger" })
-
-                        @Html.EditorFor(model => model.EmailCoordenador, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.EmailCoordenador, "", new { @class = "text-danger" })
                     </div>
                 </div>
-            </div>
-            <div class="panel-footer panel-info">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Gravar alterações" class="btn btn-info" />
-                    @Html.ActionLink("Retornar para a listagem de cursos", "index", null, new { @class = "btn btn-warning" })
 
+                <div class="form-group">
+                @Html.LabelFor(model => model.Coordenador, htmlAttributes: new { @class = "control-label col-md-1" })
+                <div class="col-md-11">
+                    @Html.EditorFor(model => model.Coordenador, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Coordenador, "", new { @class = "text-danger" })
                 </div>
-                <br />
-                <br />
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.EmailCoordenador, htmlAttributes: new { @class = "control-label col-md-1" })
+                <div class="col-md-11">
+                    @Html.EditorFor(model => model.EmailCoordenador, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.EmailCoordenador, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-offset-1 col-md-11">
+                <input type="submit" value="Gravar alterações" class="btn btn-primary" />
+                @Html.ActionLink("Retornar para a listagem de cursos", "index", null, new { @class = "btn btn-success" })
 
             </div>
-        </div>
-    </div>
+            <br />
+            <br />
 
+        </div>
+    </table>
 }
 
 @section ScriptPage {
