--- a/Interdisciplinar/Views/Cursos/Index.cshtml
+++ b/Interdisciplinar/Views/Cursos/Index.cshtml
@@ -8,85 +8,75 @@
 
 @if (@TempData["Message"] != null)
 {
-    <div class="alert	alert-success" role="alert">
-        @TempData["Message"]
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        @TempData["Message"].
     </div>
-
 }
 
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        Relação	de CURSOS registrados
-    </div>
-    <div class="panel-body">
-        <table class="table	table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.CursoId)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Nome)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Coordenador)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.EmailCoordenador)
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CursoId)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Nome)
-                        </td>
-                        <th>
-                            @Html.DisplayFor(modelItem => item.Coordenador)
-                        </th>
-                        <th>
-                            @Html.DisplayFor(modelItem => item.EmailCoordenador)
-                        </th>
-                        <td>
-                            @Html.ActionLink("Alterar", "Edit", new { id = item.CursoId }) |
-                            @Html.ActionLink("Detalhes", "Details", new { id = item.CursoId }) |
-                            @Html.ActionLink("Eliminar", "Delete", new { id = item.CursoId })
-                        </td>
-                    </tr>
-                }
+<h2>relação de cursos registrados</h2>
+<table class="table	table-striped table-hover table-bordered table-condensed">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.CursoId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Coordenador)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmailCoordenador)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CursoId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <th>
+                    @Html.DisplayFor(modelItem => item.Coordenador)
+                </th>
+                <th>
+                    @Html.DisplayFor(modelItem => item.EmailCoordenador)
+                </th>
+                <td>
+                    @Html.ActionLink("Alterar", "Edit", new { id = item.CursoId }) |
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.CursoId }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.CursoId })
+                </td>
+            </tr>
+        }
 
-            </tbody>
-        </table>
-    </div>
-    <div class="panel-footer panel-info">
-        @Html.ActionLink("Registrar	um novo Curso", "Create", null, new { @class = "btn btn-success" })
-    </div>
-</div>
+    </tbody>
+</table>
+
+
+@Html.ActionLink("Registrar	um novo Curso", "Create", null, new { @class = "btn btn-primary" })
 
 @section styles
 {
     <link href="@Url.Content("~/content/DataTables/css/dataTables.bootstrap.css")" rel="stylesheet" />
 }
 
-@section ScriptPage
-{
+@section	ScriptPage	{
     <script src="@Url.Content("~/scripts/DataTables/jquery.dataTables.js")"></script>
     <script src="@Url.Content("~/scripts/DataTables/dataTables.bootstrap.js")"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('.table').dataTable({ "order": [[1, "asc"]] });
+            $('li').removeClass("active");
+            $('#liCursos').addClass("active");
         });
-    </script>
-    <script type="text/javascript">
-        $('li').removeClass("active");
-        $('#liCursos').addClass("active");
-    	});
     </script>
 
 }
