--- a/Interdisciplinar/Views/DepartamentosOpet/Create.cshtml
+++ b/Interdisciplinar/Views/DepartamentosOpet/Create.cshtml
@@ -10,37 +10,38 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            Registro de um novo departamento
-        </div>
+
+    <h2> Registro de um novo departamento</h2>
+
+    <table class="table	table-striped table-hover table-bordered table-condensed">
         <div class="panel-body">
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.LabelFor(model => model.EmailDepartamento, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    @Html.LabelFor(model => model.Nome, "Nome", htmlAttributes: new { @class = "control-label col-md-1" })
+                    <div class="col-md-11">
                         @Html.EditorFor(model => model.Nome, new { htmlAtributtes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => Model.Nome, "", new { @class = "text-danger" })
-
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.EmailDepartamento, "Email", htmlAttributes: new { @class = "control-label col-md-1" })
+                    <div class="col-md-11">
                         @Html.EditorFor(model => model.EmailDepartamento, new { htmlAtributtes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => Model.EmailDepartamento, "", new { @class = "text-danger" })
 
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="panel-footer panel-info">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Adicionar um departamento" class="btn btn-danger" />
-                @Html.ActionLink("Retornar para a listagem de departamentoss", "Index", null, new { @class = "btn btn-warning" })
+                <div class="col-md-offset-1 col-md-11">
+                    <input type="submit" value="Adicionar um departamento" class="btn btn-primary" />
+                    @Html.ActionLink("Retornar para a listagem de departamentos", "Index", null, new { @class = "btn btn-success" })
 
+                </div>
+                <br />
+                <br />
             </div>
-            <br />
-            <br />
-        </div>
-    </div>
+            </div>
+    </table>
 }
 
 @section ScriptPage {
@@ -51,7 +52,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('li').removeClass("active");
-            $('#liCursos').addClass("active");
+            $('#liDepartamentosOpet').addClass("active");
         });
     </script>
 }
