--- a/Interdisciplinar/Views/DepartamentosOpet/Details.cshtml
+++ b/Interdisciplinar/Views/DepartamentosOpet/Details.cshtml
@@ -5,27 +5,39 @@
     ViewBag.Title = "Visualizando detalhes de um departamento";
 }
 
-<div class="panel	panel-primary">
-    <div class="panel-heading">
-        Visualizando detalhes de departamento
-    </div>
-    <div class="panel-body">
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome)
-            @Html.LabelFor(model => model.EmailDepartamento)
-            <br />
-            <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="glyphicon	 glyphicon-user"></i>
-                </span>
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                @Html.EditorFor(model => model.EmailDepartamento, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-            </div>
-        </div>
-    </div>
-    <div class="panel-footer panel-info">
-        @Html.ActionLink("Alterar", "Edit", new { id = Model.DepartamentoOpetId }, new { @class = "btn	btn-info" })
-        @Html.ActionLink("Retornar	para a	listagem", "Index", null, new { @class = "btn btn-info" })
+<h2>Visualizando detalhes de departamento</h2>
+
+<div class="form-group">
+    @Html.LabelFor(model => model.Nome)
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i class="glyphicon	 glyphicon-user"></i>
+        </span>
+        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
     </div>
 </div>
+
+<div class="form-group">
+    @Html.LabelFor(model => model.EmailDepartamento)
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i class="glyphicon	 glyphicon-user"></i>
+        </span>
+        @Html.EditorFor(model => model.EmailDepartamento, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+    </div>
+</div>
+
+
+@Html.ActionLink("Alterar", "Edit", new { id = Model.DepartamentoOpetId }, new { @class = "btn	btn-primary" })
+@Html.ActionLink("Retornar	para a	listagem", "Index", null, new { @class = "btn btn-success" })
+
+
+@section ScriptPage	{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('li').removeClass("active");
+            $('#liDepartamentosOpet').addClass("active");
+        });
+    </script>
+}
 
