--- a/Interdisciplinar/Views/DepartamentosOpet/Edit.cshtml
+++ b/Interdisciplinar/Views/DepartamentosOpet/Edit.cshtml
@@ -14,41 +14,42 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            Alteração dos dados de um departamento
-        </div>
+
+    <h2>Alteração dos dados de um departamento</h2>
+    <table class="table	table-striped table-hover table-bordered table-condensed">
         <div class="panel-body">
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.DepartamentoOpetId)
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.LabelFor(model => model.EmailDepartamento, htmlAttributes: new { @class = "control-label col-md-2" })
-
-                    <div class="col-md-10">
+                    @Html.LabelFor(model => model.Nome,"Nome", htmlAttributes: new { @class = "control-label col-md-1" })
+                    <div class="col-md-11">
                         @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
+                <div class="form-group">
+                    @Html.LabelFor(model => model.EmailDepartamento, "Email", htmlAttributes: new { @class = "control-label col-md-1" })
+                    <div class="col-md-11">
                         @Html.EditorFor(model => model.EmailDepartamento, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.EmailDepartamento, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
-            <div class="panel-footer panel-info">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Gravar alterações" class="btn btn-info" />
-                    @Html.ActionLink("Retornar para a listagem de departamentos", "index", null, new { @class = "btn btn-warning" })
 
-                </div>
-                <br />
-                <br />
+
+            <div class="col-md-offset-1 col-md-11">
+                <input type="submit" value="Gravar alterações" class="btn btn-primary" />
+                @Html.ActionLink("Retornar para a listagem de departamentos", "index", null, new { @class = "btn btn-success" })
 
             </div>
-        </div>
-    </div>
+            <br />
+            <br />
 
+        </div>
+    </table>
 }
 
 @section ScriptPage {
@@ -59,7 +60,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('li').removeClass("active");
-            $('#liCursos').addClass("active");
+            $('#liDepartamentos').addClass("active");
         });
     </script>
 }
